adding logo and styles for responisve site

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Dev</title>
+  <title>Mario Glez</title>
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/23/49/2d/23492d49eefc1794c50377c2613baa00.jpg">
+  <link rel="icon" type="image/png" href="../images/logo-mg.svg">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1 ">
 </head>
@@ -14,7 +14,7 @@
   <i class="icon-menu burger-button" id="burger-menu"></i>
   <header class="header">
     <div class="container">
-      <figure class="logo"><img src="https://i.pinimg.com/originals/23/49/2d/23492d49eefc1794c50377c2613baa00.jpg" alt="Logotipo"></figure>
+      <figure class="logo"><img src="../images/logo-mg.svg" alt="Logotipo"></figure>
       <nav class="menu">
         <ul>
           <li>
@@ -30,14 +30,18 @@
       </nav>
     </div>
   </header>
+
   <div class="container">
     <h2 class="event-title">Más sobre mi</h2>
   </div>
+
   <section id="eventos" class="event-list">
+
     <div class="container">
+
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="https://images.pexels.com/photos/196646/pexels-photo-196646.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="500" alt="experiencia">
+          <img class="event-image" src="https://images.unsplash.com/photo-1474314881477-04c4aac40a0e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" width="500" alt="experiencia">
         </figure>
         <div class="event-detail">
           <h3>Project</h3>
@@ -45,9 +49,10 @@
           <a href="">Más</a>
         </div>
       </article>
+
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="https://images.pexels.com/photos/196646/pexels-photo-196646.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="500" alt="experiencia">
+          <img class="event-image" src="https://images.unsplash.com/photo-1474314881477-04c4aac40a0e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" width="500" alt="experiencia">
         </figure>
         <div class="event-detail">
           <h3>Project</h3>
@@ -55,9 +60,10 @@
           <a href="">Más</a>
         </div>
       </article>
+
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="https://images.pexels.com/photos/196646/pexels-photo-196646.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="500" alt="experiencia">
+          <img class="event-image" src="https://images.unsplash.com/photo-1474314881477-04c4aac40a0e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" width="500" alt="experiencia">
         </figure>
         <div class="event-detail">
           <h3>Project</h3>
@@ -65,9 +71,10 @@
           <a href="">Más</a>
         </div>
       </article>
+
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="https://images.pexels.com/photos/196646/pexels-photo-196646.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="500" alt="experiencia">
+          <img class="event-image" src="https://images.unsplash.com/photo-1474314881477-04c4aac40a0e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" width="500" alt="experiencia">
         </figure>
         <div class="event-detail">
           <h3>Project</h3>
@@ -75,8 +82,11 @@
           <a href="">Más</a>
         </div>
       </article>
+
     </div>
+
   </section>
+
   <footer class="footer">
     <div class="container">
       <div>
@@ -88,6 +98,8 @@
       </div>
     </div>
   </footer>
+
+
   <script>
     const burgerButton = document.querySelector('#burger-menu');
     const menu = document.querySelector('.menu');
