--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <i class="icon-menu burger-button" id="burger-menu"></i>
   <header class="header">
     <div class="container">
-      <figure class="logo"><img src="../images/logo-mg.svg" alt="Logotipo"></figure>
+      <figure class="logo"><img src="images/logo-mg.svg" alt="Logotipo"></figure>
       <nav class="menu">
         <ul>
           <li>
